Regression: All properties with eyedropper in same panel get bright when any of them is hovered #97518

Closed
opened 2022-04-21 19:45:48 +02:00 by Eyad Ahmed · 9 comments
Contributor

System Information
Operating system: Windows-10-10.0.19044-SP0 64 Bits
Graphics card: Radeon RX 5500 XT ATI Technologies Inc. 4.5.14761 Core Profile Context 21.10.2 30.0.13025.5005

Blender Version
Broken: version: 3.2.0 Alpha, branch: master, commit date: 2022-04-21 17:08, hash: 9de3ed5c82

Caused by ff57ce8617

2022-04-21 19-42-56-1.mp4

Exact steps for others to reproduce the error

  • Open any pane that has multiple propeties with eyedropper
  • Hover any one of them, you will see that all of them get hover behaviour
**System Information** Operating system: Windows-10-10.0.19044-SP0 64 Bits Graphics card: Radeon RX 5500 XT ATI Technologies Inc. 4.5.14761 Core Profile Context 21.10.2 30.0.13025.5005 **Blender Version** Broken: version: 3.2.0 Alpha, branch: master, commit date: 2022-04-21 17:08, hash: `9de3ed5c82` Caused by ff57ce8617 [2022-04-21 19-42-56-1.mp4](https://archive.blender.org/developer/F13014726/2022-04-21_19-42-56-1.mp4) **Exact steps for others to reproduce the error** - Open any pane that has multiple propeties with eyedropper - Hover any one of them, you will see that all of them get hover behaviour
Author
Contributor

Added subscriber: @IyadAhmed

Added subscriber: @IyadAhmed
Eyad Ahmed changed title from All properties with eyedropper in same panel get bright when any of them are hovered to All properties with eyedropper in same panel get bright when any of them is hovered 2022-04-21 19:46:01 +02:00
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Added subscribers: @JulianEisel, @lichtwerk

Added subscribers: @JulianEisel, @lichtwerk
Member

Caused by ff57ce8617

CC @JulianEisel

Caused by ff57ce8617 CC @JulianEisel
Philipp Oeser changed title from All properties with eyedropper in same panel get bright when any of them is hovered to Regression: All properties with eyedropper in same panel get bright when any of them is hovered 2022-04-25 16:17:46 +02:00
Eyad Ahmed self-assigned this 2022-05-03 02:36:01 +02:00
Eyad Ahmed removed their assignment 2022-05-03 03:53:01 +02:00
Author
Contributor

This comment was removed by @IyadAhmed

*This comment was removed by @IyadAhmed*
Julian Eisel self-assigned this 2022-05-10 13:03:36 +02:00

This issue was referenced by 8d43ee1b08

This issue was referenced by 8d43ee1b0823e6e5fae2fdceaee0a94d3d61f9b7

This issue was referenced by 4680331749

This issue was referenced by 4680331749aa716fe01445c473308f3ff80ec8c9
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#97518
No description provided.